--- a/src/Transmitly.ChannelProvider.Mailgun.Api/Transmitly.ChannelProvider.Mailgun.Api.csproj
+++ b/src/Transmitly.ChannelProvider.Mailgun.Api/Transmitly.ChannelProvider.Mailgun.Api.csproj
@@ -53,4 +53,9 @@
 		<Reference Include="System.Net.Http" />
 		<Reference Include="System.Web" />
 	</ItemGroup>
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>Transmitly.ChannelProvider.Mailgun.Api.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 </Project>
