--- a/tests/Transmitly.ChannelProvider.Mailgun.Api.Tests/Transmitly.ChannelProvider.Mailgun.Api.Tests.csproj
+++ b/tests/Transmitly.ChannelProvider.Mailgun.Api.Tests/Transmitly.ChannelProvider.Mailgun.Api.Tests.csproj
@@ -1,9 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net9.0;net8.0;net6.0</TargetFrameworks>
-	</PropertyGroup>
-	<PropertyGroup>
-		<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT'">net48;net472;$(TargetFrameworks);</TargetFrameworks>
+		<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT'">net472;net48</TargetFrameworks>
+		<TargetFrameworks>$(TargetFrameworks);net6.0;net8.0;net9.0</TargetFrameworks>
 	</PropertyGroup>
 	<PropertyGroup>
 		<ImplicitUsings>enable</ImplicitUsings>
